--- a/app/src/main/res/layout/activity_country_details.xml
+++ b/app/src/main/res/layout/activity_country_details.xml
@@ -15,6 +15,7 @@
         app:navigationIcon="?attr/homeAsUpIndicator"/>
     <ImageView
         android:id="@+id/country_flag"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
